<resources>
    <string name="app_name">FF-Translator</string>
    <string name="lang_en">English</string>
    <string name="lang_ru">Русский</string>
    <string name="action_settings">Settings</string>
    <string name="action_translate">Translate</string>
    <string name="action_history_fav">History/Favorites</string>
    <string name="action_history">History</string>
    <string name="action_favorite">Favorites</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_source">Source code</string>
    <string name="delete">Delete</string>
    <string name="date">dd.MM.yyyy, HH:mm</string>
    <string name="err_resp_402">The API key is blocked</string>
    <string name="err_resp_401">Wrong API key</string>
    <string name="err_resp_404">Exceeded the dialy limit on the amount of text</string>
    <string name="err_resp_413">Exceeded the maximum allowed text size</string>
    <string name="err_resp_422">The text cannot be translated</string>
    <string name="err_resp_501">The selected translation direction is not supported</string>
    <string name="err_resp_unknown">Unknown response from server. Try again.</string>
    <string name="edittext_input">Original text</string>
    <string name="edittext_output">Translated text</string>
    <string name="dlg_delete_history">Delete history?</string>
    <string name="dlg_delete_history_msg">History must be deleted forever!</string>
    <string name="ok">OK</string>
    <string name="dlg_favorite_edit">Edit</string>
    <string name="history_empty">History is empty</string>
    <string name="favorite_empty">Favorites is empty</string>
    <string name="enter_title">Enter text</string>
    <string name="enter_translation">Enter translation</string>
    <string name="dlg_delete_favorite">Delete favorites?</string>
    <string name="dlg_delete_favorite_msg">Favorites must be deleted forever!</string>
    <string name="no_net_connection">No internet connection</string>
    <string name="try_again">Retry</string>
    <string name="press_once_more">Press back once more</string>
    <string name="acra_email_promt">An unacknowledged error occurred that stopped the application. Help us fix it by sending the error information.</string>
    <string name="acra_app_crashed">App crashed!</string>
    <string name="dlg_font_size">Font size</string>
    <string name="clear">Reset</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="added_to_favorites">Added to favorites</string>
    <string name="async_task_canceled">Asynchronous task cancelled</string>
    <string name="dlg_return_notif_msg">In order to change the behavior to the default, clear the checkbox and restart the app.</string>
    <string name="notice">Hint</string>
    <string name="action_voice_input">Voice input</string>
    <string name="speech_girl_is_not_supported">Voice input is not supported</string>
    <string name="permissions">Permissions</string>
    <string name="speak_now">Speak now :)</string>
    <string name="choose_lang">Languages</string>
    <string name="copy">Copy</string>
    <string name="copy2">Copy</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="title_activity_browser">Browser</string>
    <string name="enter_url">Enter URL here</string>
    <string name="entered_win">Correct</string>
    <string name="paste">Paste</string>
    <string name="about">About</string>
    <string name="changelog">Changelog</string>
    <string name="thirdpaty_libs">Licenses</string>
    <string name="lib1">Android</string>
    <string name="lib2">Android Robot</string>
    <string name="lib3">Android Support Library</string>
    <string name="lib4">AppCompat Library</string>
    <string name="lib5">CardView Library</string>
    <string name="lib6">Design Library</string>
    <string name="lib7">FastHub</string>
    <string name="lib8">ForPDA New</string>
    <string name="lib9">Gradle Retrolambda Plugin</string>
    <string name="lib10">Palette Library</string>
    <string name="lib11">RecyclerView Library</string>
    <string name="owner_lib1">Android Open Source Project (APACHE 2.0)</string>
    <string name="owner_lib2">The Android robot is reproduced or modified from work created and shared by Google and used according to terms described in the CC 3.0 Attribution License</string>
    <string name="owner_lib3">Support different versions of Android back to API 4. Presented by Google Inc. (APACHE 2.0)</string>
    <string name="owner_lib4">Material Design support backwards to API 7. Presented by Google Inc. (APACHE 2.0)</string>
    <string name="owner_lib5">Material CardView widget backwards to API 7. Presented by Google Inc. (APACHE 2.0)</string>
    <string name="owner_lib6">Additional Material Design widgets and API\'s. Presented by Google Inc. (APACHE 2.0)</string>
    <string name="owner_lib7">Fast and simple GitHub client. Presented by k0shk0sh.(APACHE 2.0)</string>
    <string name="owner_lib8">Unofficial reactive client for 4PDA. Presented by Evgeny Nizamiev.(APACHE 2.0)</string>
    <string name="owner_lib9">A gradle plugin for getting java 8 lambda support in java 6, 7 and android. Presented by Evan Tatarka (APACHE 2.0)</string>
    <string name="owner_lib10">Additional Material Design color palettes and API\'s. Presented by Google Inc. (APACHE 2.0)</string>
    <string name="owner_lib11">Fast and highly-customizable list widget for android. Presented by Google Inc. (APACHE 2.0)</string>
    <string name="pref_api_key">Translator API-key</string>
    <string name="pref_api_key_sum">Enter the API-key obtained in the Yandex.Translate</string>
    <string name="pref_api_detect">Auto-detect language</string>
    <string name="pref_api_detect_sum">Can increase the translation time</string>
    <string name="pref_ctg_api">API</string>
    <string name="pref_ctg_sys">System</string>
    <string name="pref_sys_permissions">Permissions</string>
    <string name="pref_sys_permissions_sum">Android 6+. Gives all permissions at once, if they were not received automatically</string>
    <string name="pref_sys_perm_mic">Microphone</string>
    <string name="pref_sys_perm_mic_sum">Needed for voice input</string>
    <string name="pref_sys_perm_file">Storage</string>
    <string name="pref_sys_perm_file_sum">Needed for saving/restoring settings</string>
    <string name="pref_sys_perm_settings">Open System settings</string>
    <string name="pref_sys_perm_settings_sum"><![CDATA[Settings > Apps > FF-Translator > App info]]></string>
    <string name="pref_sys_back">Press again to exit</string>
    <string name="pref_sys_back_sum">Prevents accidental pressing the \'Back\' button</string>
    <string name="pref_sys_back_kill">Kill app on exit</string>
    <string name="pref_sys_back_kill_sum">Finish the process fully, after closing the app</string>
    <string name="pref_ctg_ui">Customization</string>
    <string name="pref_ui_theme">App theme</string>
    <string name="pref_ui_accent">Accent color</string>
    <string name="pref_ui_blackic">Black status-bar icons</string>
    <string name="pref_ui_font_size">Font size</string>
    <string name="pref_ui_font_size_sum">ONLY applies to input fields</string>
    <string name="pref_ctg_lists">Lists</string>
    <string name="pref_lists_duplicates">Do not add duplicates to the history</string>
    <string name="pref_lists_duplicates_sum">Only first translation has been added</string>
    <string name="pref_ctg_performance">Interaction</string>
    <string name="pref_performance_return">Tap \"Return\" to translate</string>
    <string name="pref_performance_return_sum">Translate by pressing ENTER key</string>
    <string name="pref_performance_clip">Translate from clipboard</string>
    <string name="pref_performance_clip_sum">Offer to paste text from clipboard when the application starts</string>
    <string name="pref_ctg_other">Other</string>
    <string name="pref_dev">Dev settings</string>
    <string name="pref_dev_sum">DO NOT MODIFY!!!</string>
    <string name="share_url">Share link</string>
    <string name="save_image">Save image</string>
    <string name="err_resp_code_explanation">Error code:</string>
    <string name="webview_version_error">WebView version error</string>
    <string name="no_webview">WebView has not been installed</string>
    <string name="open_with">Open with</string>
    <string name="copy_url">Copy link</string>
    <string name="goto_settings_toast">Open the permissions section and enable all items</string>
    <string name="translate_site">Translate website</string>
    <string name="text_in_clip_detected">Translate text from clipboard?</string>
    <string name="action_enter_url">Enter URL</string>
    <string name="action_find_on_page">Find on page</string>
    <string name="action_share">Share</string>
    <string name="action_share_sys">Share (system)</string>
    <string name="action_copy_link">@string/copy_url</string>
    <string name="action_open_in_browser">Open in browser</string>
    <string name="pref_performance_kbd">Show keyboard at start</string>
    <string name="owner_lib12">Simple and easy to use circle image widget for android</string>
    <string name="lib12">CircleImageView</string>
    <string name="create_bug_report">Create bug report</string>
    <string name="pref_ui_lists_anim">List animation</string>
    <string name="pref_sys_lang">Language</string>
    <string name="def_value">Default</string>
    <string name="app_theme_light">Light</string>
    <string name="app_theme_dark">Dark</string>
    <string name="app_theme_black">Black</string>
    <string name="app_lang_changed">App language has been changed. Please restart the app.</string>
    <string name="pref_performance_scan_clip">Enable clipboard service</string>
    <string name="short_descr_android">Fast and light-weight translator for Android</string>
    <string name="about_author_name">Артём Жиганов</string>
    <string name="pref_ui_blackic_sum">Android 6+</string>
    <string name="copy_close">Copy &amp; close</string>
    <string name="view">View</string>
    <string name="pref_performance_suggest">Keyboard suggestions</string>
    <string name="need_app_restart_sum">You need to restart the application</string>
    <string name="pref_licences">Licences</string>
    <string name="pref_gratitude">Gratitude</string>
    <string name="pref_gr_1">GRR_OLEG</string>
    <string name="pref_gr_1_sum">Icon designer</string>
    <string name="lib13">ACRA</string>
    <string name="owner_lib13">Application crash reports for Android</string>
    <string name="lib14">OXSwipe</string>
    <string name="owner_lib14">Swipe detection library for Android</string>
    <string name="lib15">JSON.simple 2</string>
    <string name="owner_lib15">JSON.simple library adopted for Java 7, 8 and android</string>
    <string name="pref_ctg_notifications">Notifications</string>
    <string name="pref_ui_anim">Transitions animations</string>
    <string name="pref_ui_toolbar_theme">Toolbar color</string>
    <string name="pref_ui_toolbar_override">Override Toolbar color</string>
    <string name="pref_ctg_backup_restore">Create/restore backup</string>
    <string name="pref_notifications_doze">Doze mode white list</string>
    <string name="pref_notifications_ongoing">HeadsUp notifications</string>
    <string name="pref_notifications_vibrate">Vibrate</string>
    <string name="pref_notifications_lights">Lights</string>
    <string name="pref_lists_rev_history">Older first</string>
    <string name="pref_lists_rev_fav">Newest first</string>
    <string name="pref_notifications_color_accent">Accent color</string>
    <string name="pref_notifications_alert_once">Don\'t alarm again</string>
    <string name="pref_notifications_on_boot">Start on boot</string>
    <string name="pref_notifications_accent_color_sum">Also uses for the notification light</string>
    <string name="pref_notifications_clear">Transparent icon</string>
</resources>