<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_ctg_api"/>
    <!--suppress AndroidDomInspection -->
    <EditTextPreference
        android:defaultValue="trnsl.1.1.20170521T151053Z.9f0a37c30f43230c.2f3612b71e53014b51ad7cee021b01f9e5d52577"
        android:key="api.key"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        android:title="@string/pref_api_key"
        android:summary="@string/pref_api_key_sum"/>
    <CheckBoxPreference
        android:key="api.detect"
        android:title="@string/pref_api_detect"
        android:summary="@string/pref_api_detect_sum"
        android:defaultValue="false"/>

    <PreferenceCategory android:title="@string/pref_ctg_sys" />
    <ListPreference
        android:key="sys.lang"
        android:title="@string/pref_sys_lang"
        android:entries="@array/entries_lang"
        android:entryValues="@array/values_lang"/>
    <Preference
        android:key="sys.permissions"
        android:title="@string/pref_sys_permissions"
        android:summary="@string/pref_sys_permissions_sum"/>
    <CheckBoxPreference
        android:key="performance.backpressed"
        android:title="@string/pref_sys_back"
        android:summary="@string/pref_sys_back_sum"
        android:defaultValue="true"/>
    <CheckBoxPreference
        android:key="performance.kill"
        android:title="@string/pref_sys_back_kill"
        android:summary="@string/pref_sys_back_kill_sum"
        android:defaultValue="false"/>

    <PreferenceCategory android:title="@string/pref_ctg_ui"/>
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/theme_names"
        android:entryValues="@array/theme_values"
        android:key="ui.theme"
        android:title="@string/pref_ui_theme" />
    <ListPreference
        android:defaultValue="4"
        android:entries="@array/accent_names"
        android:entryValues="@array/accent_values"
        android:key="ui.accent"
        android:title="@string/pref_ui_accent" />
    <CheckBoxPreference
        android:key="ui.blackicons"
        android:title="@string/pref_ui_blackic"
        android:summary="@string/pref_ui_blackic_sum"
        android:defaultValue="true"/>
    <Preference
        android:key="ui.font.size"
        android:title="@string/pref_ui_font_size"
        android:summary="@string/pref_ui_font_size_sum"/>

    <PreferenceCategory android:title="@string/pref_ctg_lists"/>
    <CheckBoxPreference
        android:key="performance.duplicates"
        android:title="@string/pref_lists_duplicates"
        android:summary="@string/pref_lists_duplicates_sum"
        android:defaultValue="true"/>
    <CheckBoxPreference
        android:key="ui.list.anim"
        android:title="@string/pref_ui_lists_anim"
        android:defaultValue="true"/>

    <PreferenceCategory android:title="@string/pref_ctg_performance"/>
    <CheckBoxPreference
        android:key="performance.keyboard"
        android:title="@string/pref_performance_kbd"
        android:defaultValue="false"/>
    <CheckBoxPreference
        android:key="performance.return"
        android:title="@string/pref_performance_return"
        android:summary="@string/pref_performance_return_sum"
        android:defaultValue="false"/>
    <CheckBoxPreference
        android:key="performance.suggestions"
        android:title="@string/pref_performance_suggest"
        android:summary="@string/need_app_restart_sum"
        android:defaultValue="true"/>
    <CheckBoxPreference
        android:key="performance.translate.clipboard"
        android:title="@string/pref_performance_clip"
        android:summary="@string/pref_performance_clip_sum"
        android:defaultValue="true"/>
    <CheckBoxPreference
        android:key="performance.scan.clipboard"
        android:title="@string/pref_performance_scan_clip"
        android:defaultValue="false"/>

    <PreferenceCategory android:title="@string/pref_ctg_other"/>
    <Preference
        android:key="other.version"/>
    <Preference
        android:key="dev.opt"
        android:title="@string/pref_dev"
        android:summary="@string/pref_dev_sum"/>
</PreferenceScreen>