<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017 Snow Volf (Artem Zhiganov).
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_gratitude">
        <Preference android:title="@string/pref_gr_1" android:summary="@string/pref_gr_1_sum">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://4pda.ru/forum/index.php?showuser=1933412"/>
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_licences">
        <Preference android:title="@string/lib13" android:summary="@string/owner_lib13">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/acra/ACRA"/>
        </Preference>
        <Preference android:title="@string/lib1" android:summary="@string/owner_lib1">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://source.android.com"/>
        </Preference>
        <Preference android:title="@string/lib2" android:summary="@string/owner_lib2">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://developer.android.com/distribute/marketing-tools/brand-guidelines.html"/>
        </Preference>
        <Preference android:title="@string/lib3" android:summary="@string/owner_lib3">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://raw.githubusercontent.com/guardianproject/lildebi/master/libs/android-support-v4.jar.LICENSE"/>
        </Preference>
        <Preference android:title="@string/lib4" android:summary="@string/owner_lib4">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://raw.githubusercontent.com/guardianproject/lildebi/master/libs/android-support-v4.jar.LICENSE"/>
        </Preference>
        <Preference android:title="@string/lib5" android:summary="@string/owner_lib5">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://raw.githubusercontent.com/guardianproject/lildebi/master/libs/android-support-v4.jar.LICENSE"/>
        </Preference>
        <Preference android:title="@string/lib6" android:summary="@string/owner_lib6">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://raw.githubusercontent.com/guardianproject/lildebi/master/libs/android-support-v4.jar.LICENSE"/>
        </Preference>
        <Preference android:title="@string/lib7" android:summary="@string/owner_lib7">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/k0shk0sh/FastHub"/>
        </Preference>
        <Preference android:title="@string/lib8" android:summary="@string/owner_lib8">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/RadiationX/ForPDA"/>
        </Preference>
        <Preference android:title="@string/lib9" android:summary="@string/owner_lib9">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/evant/gradle-retrolambda"/>
        </Preference>
        <Preference android:title="@string/lib10" android:summary="@string/owner_lib10">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://raw.githubusercontent.com/guardianproject/lildebi/master/libs/android-support-v4.jar.LICENSE"/>
        </Preference>
        <Preference android:title="@string/lib11" android:summary="@string/owner_lib11">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://raw.githubusercontent.com/guardianproject/lildebi/master/libs/android-support-v4.jar.LICENSE"/>
        </Preference>
        <Preference android:title="@string/lib12" android:summary="@string/owner_lib12">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/hdodenhof/CircleImageView"/>
        </Preference>
        <Preference android:title="@string/lib14" android:summary="@string/owner_lib14">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/10uroi/OXSwipe"/>
        </Preference>
        <Preference android:title="@string/lib15" android:summary="@string/owner_lib15">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/cliftonlabs/json-simple"/>
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>