<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/copy2"
        android:id="@+id/action_copy"
        android:icon="@drawable/ic_bar_copy"/>
    <item android:title="@string/copy_close"
        android:id="@+id/action_copy_close"
        android:icon="@drawable/ic_bar_copy"/>
    <item android:title="@string/view"
        android:id="@+id/action_view_fullscreen"
        android:icon="@drawable/ic_action_view_in"/>
    <item
        android:id="@+id/action_history_add_favorite"
        android:title="@string/add_to_favorites"
        android:icon="@drawable/ic_action_star"/>
    <item
        android:id="@+id/action_history_delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_action_cancel_task"/>
    <item android:title="@string/action_share"
        android:id="@+id/action_share"
        android:icon="@drawable/ic_bar_share"
        android:actionProviderClass="android.widget.ShareActionProvider"/>
    <item android:title="@string/action_share_sys"
        android:id="@+id/action_share_sys"
        android:icon="@drawable/ic_bar_share"/>
</menu>