<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017 Snow Volf (Artem Zhiganov).
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/theme_names"
        android:entryValues="@array/theme_values"
        android:key="ui.theme"
        android:title="@string/pref_ui_theme" />
    <CheckBoxPreference
        android:key="ui.toolbar.coloring"
        android:title="@string/pref_ui_toolbar_override"
        android:defaultValue="false" />
    <ListPreference
        android:entries="@array/toolbar_names"
        android:entryValues="@array/toolbar_values"
        android:key="ui.toolbar"
        android:title="@string/pref_ui_toolbar_theme"
        android:dependency="ui.toolbar.coloring"/>
    <ListPreference
        android:defaultValue="5"
        android:entries="@array/accent_names"
        android:entryValues="@array/accent_values"
        android:key="ui.accent"
        android:title="@string/pref_ui_accent" />
    <CheckBoxPreference
        android:key="ui.blackicons"
        android:title="@string/pref_ui_blackic"
        android:summary="@string/pref_ui_blackic_sum"
        android:defaultValue="true"/>
    <Preference
        android:key="ui.font.size"
        android:title="@string/pref_ui_font_size"
        android:summary="@string/pref_ui_font_size_sum"/>
    <CheckBoxPreference
        android:key="ui.anim"
        android:title="@string/pref_ui_anim"
        android:defaultValue="true"/>
</PreferenceScreen>