<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017 Snow Volf (Artem Zhiganov).
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="performance.duplicates"
        android:title="@string/pref_lists_duplicates"
        android:summary="@string/pref_lists_duplicates_sum"
        android:defaultValue="true"/>
    <CheckBoxPreference
        android:key="ui.list.anim"
        android:title="@string/pref_ui_lists_anim"
        android:defaultValue="true"/>
    <PreferenceCategory android:title="@string/action_history">
        <CheckBoxPreference
            android:key="history.reverse"
            android:title="@string/pref_lists_rev_history"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/action_favorite">
        <CheckBoxPreference
            android:key="favorite.reverse"
            android:title="@string/pref_lists_rev_fav"/>
    </PreferenceCategory>
</PreferenceScreen>