<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017 Snow Volf (Artem Zhiganov).
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="performance.keyboard"
        android:title="@string/pref_performance_kbd"
        android:defaultValue="false"/>
    <CheckBoxPreference
        android:key="performance.return"
        android:title="@string/pref_performance_return"
        android:summary="@string/pref_performance_return_sum"
        android:defaultValue="false"/>
    <CheckBoxPreference
        android:key="performance.suggestions"
        android:title="@string/pref_performance_suggest"
        android:summary="@string/need_app_restart_sum"
        android:defaultValue="true"/>
    <CheckBoxPreference
        android:key="performance.translate.clipboard"
        android:title="@string/pref_performance_clip"
        android:summary="@string/pref_performance_clip_sum"
        android:defaultValue="true"/>
</PreferenceScreen>