<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017 Snow Volf (Artem Zhiganov).
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:key="header.api"
        android:icon="@drawable/ic_pref_category_api"
        android:title="@string/pref_ctg_api"/>
    <Preference
        android:key="header.sys"
        android:icon="@drawable/ic_pref_category_system"
        android:title="@string/pref_ctg_sys"/>
    <Preference
        android:key="header.ui"
        android:icon="@drawable/ic_pref_category_ui"
        android:title="@string/pref_ctg_ui"/>
    <Preference
        android:key="header.performance"
        android:icon="@drawable/ic_pref_category_interaction"
        android:title="@string/pref_ctg_performance"/>
    <Preference
        android:key="header.lists"
        android:icon="@drawable/ic_pref_category_lists"
        android:title="@string/pref_ctg_lists"/>
    <Preference
        android:key="header.notifications"
        android:icon="@drawable/ic_pref_category_notifications"
        android:title="@string/pref_ctg_notifications"/>
    <Preference
        android:key="header.import.export"
        android:icon="@drawable/ic_pref_category_backup_restore"
        android:title="@string/pref_ctg_backup_restore"/>
    <Preference
        android:key="header.other"
        android:icon="@drawable/ic_pref_category_other"
        android:title="@string/pref_ctg_other"/>
</PreferenceScreen>