<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017 Snow Volf (Artem Zhiganov).
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <CheckBoxPreference
        android:key="performance.scan.clipboard"
        android:title="@string/pref_performance_scan_clip"
        android:defaultValue="false"/>
    <CheckBoxPreference
        android:key="notifications.clear"
        android:title="@string/pref_notifications_clear"
        android:defaultValue="false"
        android:dependency="performance.scan.clipboard"/>
    <CheckBoxPreference
        android:key="notifications.boot"
        android:title="@string/pref_notifications_on_boot"
        android:defaultValue="true"
        android:dependency="performance.scan.clipboard"/>
    <Preference
        android:key="notifications.doze"
        android:title="@string/pref_notifications_doze"
        android:dependency="performance.scan.clipboard"/>
    <CheckBoxPreference
        android:key="notifications.ongoing"
        android:title="@string/pref_notifications_ongoing"
        android:defaultValue="false"
        android:dependency="performance.scan.clipboard"/>
    <CheckBoxPreference
        android:key="notifications.vibrate"
        android:title="@string/pref_notifications_vibrate"
        android:defaultValue="false"
        android:dependency="performance.scan.clipboard"/>
    <CheckBoxPreference
        android:key="notifications.lights"
        android:title="@string/pref_notifications_lights"
        android:defaultValue="false"
        android:dependency="performance.scan.clipboard"/>
    <com.thebluealliance.spectrum.SpectrumPreference
        android:key="notifications.accent"
        android:defaultValue="@color/light_colorAccent"
        app:spectrum_colors="@array/accent_values_circle"
        app:spectrum_columnCount="4"
        app:spectrum_outlineWidth="1dp"
        android:title="@string/pref_notifications_color_accent"
        android:summary="@string/pref_notifications_accent_color_sum"
        android:dependency="performance.scan.clipboard"/>
    <CheckBoxPreference
        android:key="notifications.alert.once"
        android:title="@string/pref_notifications_alert_once"
        android:defaultValue="true"
        android:dependency="performance.scan.clipboard"/>
</PreferenceScreen>